<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MIEM App</string>
    <string name="title_indoor">Indoor navigation</string>
    <string name="title_sandbox">Project Sandbox</string>

    <string name="cabinet_client_id" translatable="false">861005331877-0r79ua1cm5osvqpvt07i831eapgl2b9a.apps.googleusercontent.com</string>

    <string name="common_error_message">An error was occurred. Check if you are authorized and connection is stable</string>

    <string name="no_data">No data</string>

    <string name="send_mail_dialog_title">Send email</string>

    <string name="login_button_text">Login with Google</string>
    <string name="login_without_auth_button_text">Continue without authorization</string>
    <string name="login_error">An error occurred during login</string>

    <string name="student_badge">Student</string>
    <string name="teacher_badge">Teacher</string>
    <string name="unauthorized_badge">Unauthorized</string>
    <string name="unauthorized_name">Anon</string>
    <string name="profile_go_to_chat">Chat</string>
    <string name="projects_title">Projects</string>
    <string name="my_projects_title">Projects</string>
    <string name="project_members">Members:</string>
    <string name="project_type">Type:</string>
    <string name="project_state">Status:</string>
    <string name="project_role">Role:</string>
    <string name="project_hours">Hours:</string>
    <string name="project_head">Head:</string>

    <string name="applications_title">Applications</string>
    <string name="application_state_waiting">Waiting for approval</string>
    <string name="application_state_approved">Approved</string>
    <string name="application_state_declined">Declined</string>
    <string name="application_head_comment">Head comment:</string>
    <string name="application_my_comment">My comment:</string>
    <string name="application_withdraw">Withdraw</string>
    <string name="application_approve">Approve</string>

    <string name="statistics_title">Statistics</string>

    <string name="achievements_title">Achievements</string>
    <string name="tracking_section">Tracking</string>
    <string name="gitlab_section">Gitlab</string>

    <string name="git_title">Git Statistics</string>
    <string name="total_commits">Commits made</string>
    <string name="total_strings">Strings written</string>
    <string name="total_languages">Languages used</string>
    <string name="total_repos">Repositories</string>
    <string name="stats_choose_repo">Choose repository</string>

    <string name="app_title">App</string>
    <string name="settings_title">Settings</string>
    <string name="report_title">Report problem</string>
    <string name="exit_title">Log out</string>

    <string name="project_type_and_number">Project #%d, %s (%s)</string>
    <string name="project_team">Team</string>
    <string name="project_basic_info">Basic info</string>
    <string name="project_objective">Project objective</string>
    <string name="project_annotation">Annotation</string>
    <string name="project_links">Links</string>
    <string name="project_member_name">%s %s</string>
    <string name="project_vacancies_title">Vacancies</string>
    <string name="project_vacancy_required">Required</string>
    <string name="project_vacancy_recommended">Recommended</string>
    <string name="project_vacancy_apply">Apply</string>
    <string name="project_vacancy_applied">Applied</string>
    <string name="project_vacancy_about_me_hint">Describe yourself</string>
    <string name="project_vacancy_submit">Submit</string>
    <string name="project_vacancy_cancel">Cancel</string>
    <string name="project_open_in_browser">Open in browser</string>

    <string name="project_vacancies">%d vacancy(s)</string>
    <string name="search_hint">Search by name, number or head</string>
    <string name="sandbox_search_hint">Search by name or head</string>
    <string name="search_filters_title">Filters</string>
    <string name="search_filters_pr_type">Project type</string>
    <string name="search_filters_pr_state">Project state</string>
    <string name="search_filters_selector_default">Any</string>
    <string name="search_filters_with_vacancies">With vacancies</string>
    <string name="search_filters_show_results">Show results</string>

    <string name="logout">Log out</string>
    <string name="settings_theme">Theme</string>
    <string-array name="available_themes">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string name="submit_report">Report problem</string>
    <string name="tinder_button_rewind">Rewind card</string>
    <string name="tinder_button_reset">Rewind all</string>
    <string name="tinder_button_view_liked">View liked</string>
    <string name="tinder_end">Gratz! You\'ve viewed all the vacancies!!</string>
    <string name="tinder_use">Use Tinder</string>
    <string name="tinder_welcome">Welcome to Project\'s Tinder.\n\nSwipe right if you like vacancy, swipe left if not</string>
    <string name="vacancies_no_vacancies">You haven\'t liked any vacancies</string>
    <string name="tinder_end_1">For now, you\'ve viewed\n all available vacancies</string>

    <string name="start_time">9:30</string>
    <string name="finish_time">10:50</string>
    <string name="class_number">%s lesson</string>
    <string name="class_name">Calculus</string>
    <string name="class_type">Seminar</string>
    <string name="class_adress">311 (Tallinskaya st., 34)</string>
    <string name="class_teacher">Tutor Katasonova Natalya Vladimirovna</string>
    <string name="class_date">Monday, 7 March</string>
    <string name="date_selector">07.03.2022 - 13.03.2022</string>

    <string name="show_days_schedule">Do not show days with no classes</string>

</resources>