<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filtersLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_peekHeight="0dp"
    app:behavior_hideable="true"
    android:background="@drawable/bottom_sheet_background"
    android:elevation="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/search_filters_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/search_filters_pr_type"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/projectTypeSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/spinner_background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/search_filters_pr_state"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/projectStateSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/spinner_background" />

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/withVacanciesCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-7dp"
        android:minHeight="0dp"
        android:text="@string/search_filters_with_vacancies"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/showResultsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:backgroundTint="@color/colorAccent"
        android:textAllCaps="false"
        android:text="@string/search_filters_show_results"/>

    <Button
        android:id="@+id/tinderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/tinder_use"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>