<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/projectType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                tools:text="Проект #617, Программный (ДКИ)"/>

            <TextView
                android:id="@+id/projectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Android приложение МИЭМ"/>

            <TextView
                android:id="@+id/projectState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                tools:background="@drawable/project_badge_active_bg"
                tools:text="Рабочий"/>

            <TextView
                android:id="@+id/projectEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textIsSelectable="true"
                tools:text="617@miem.hse.ru"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/project_team"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/membersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_team_member"
                tools:itemCount="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/project_basic_info"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_objective"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/projectObjective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="Lorem ipsum dolor sit amet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_annotation"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/projectAnnotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="Lorem ipsum dolor sit amet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/project_links"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/linksList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_link"
                tools:itemCount="5"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>