<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent">

    <ProgressBar
        android:id="@+id/tinderLoader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/colorAccent"
        android:progressTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_stack_view"
        android:elevation="1dp"
        android:background="@drawable/ic_loader_circle"/>

    <TextView
        android:id="@+id/tinderEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tinder_end"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_stack_view" />

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/card_stack_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/viewLiked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_cards" />

    <Button
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:minLines="2"
        android:text="@string/tinder_button_reset"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewLiked"
        app:layout_constraintEnd_toStartOf="@+id/viewLiked"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewLiked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:minLines="2"
        android:text="@string/tinder_button_view_liked"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset" />

</androidx.constraintlayout.widget.ConstraintLayout>