<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/miem_logo"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>


    <LinearLayout
        android:id="@+id/loginButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginGuideline"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/login_button_text"
            android:textAllCaps="false"
            app:icon="@drawable/google_logo"
            app:iconTintMode="add"
            app:iconTint="@android:color/transparent"/>

        <Button
            android:id="@+id/withoutAuthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/login_without_auth_button_text"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:theme="@style/InverseAccent"
        app:layout_constraintTop_toTopOf="@id/loginGuideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/loginErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/login_error"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButtons"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>